k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment-04
  namespace: app
spec:
  selector:
    app: assignment-04
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
