k8s/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.moisessac.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: http
          serversTransport: argocd-insecure-transport
