k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: assignment-04
  namespace: app
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`app.local`)
    kind: Rule
    services:
    - name: assignment-04
      port: 80
